2010-12-13  Bernd Hufmann  <bhufmann@gmail.com>

	* src/org/eclipse/linuxtools/tmf/experiment/TmfExperiment.java (armRequest): For data requests, seek only if necessary   

2010-11-23  Francois Chouinard  <fchouinard@gmail.com> 

	* src/org/eclipse/linuxtools/tmf/component/TmfDataProvider.java: Adjusted background request block size
	* src/org/eclipse/linuxtools/tmf/trace/TmfTrace.java: Adjusted buffering between checkpoints

2010-11-10  Francois Chouinard  <fchouinard@gmail.com>

    Suppress warning for non-externalized strings
	   * src/org/eclipse/linuxtools/tmf/experiment/TmfExperiment.java: 

2010-11-09  Francois Chouinard  <fchouinard@gmail.com>

    * src/org/eclipse/linuxtools/tmf/experiment/TmfExperiment.java (getNextEvent): Fix for NullPointerException

    Suppress warning for non-externalized strings
	   * src/org/eclipse/linuxtools/tmf/component/TmfDataProvider.java (newCoalescedDataRequest): 
	       (coalesceDataRequest): 
	       (.run): 
	       (queueRequest): 
	   * src/org/eclipse/linuxtools/tmf/component/TmfEventProvider.java (newCoalescedDataRequest): 
	   * src/org/eclipse/linuxtools/tmf/event/TmfEvent.java (toString): 
	   * src/org/eclipse/linuxtools/tmf/event/TmfEventContent.java (toString): 
	   * src/org/eclipse/linuxtools/tmf/event/TmfEventField.java (toString): 
	   * src/org/eclipse/linuxtools/tmf/event/TmfEventReference.java (toString): 
	   * src/org/eclipse/linuxtools/tmf/event/TmfEventSource.java (toString): 
	   * src/org/eclipse/linuxtools/tmf/event/TmfEventType.java (DEFAULT_TYPE_ID): 
	       (getLabel): 
	       (toString): 
	   * src/org/eclipse/linuxtools/tmf/event/TmfTimeRange.java (toString): 
	   * src/org/eclipse/linuxtools/tmf/event/TmfTimestamp.java (synchronize): 
	       (toString): 
	   * src/org/eclipse/linuxtools/tmf/event/TmfTraceEvent.java (toString): 
	   * src/org/eclipse/linuxtools/tmf/experiment/TmfExperiment.java (TmfExperiment): 
	       (toString): 