@@ -4,5 +4,5 @@ org.eclipse.linuxtools.tmf/info=false
 
 org.eclipse.linuxtools.tmf/component=false
 org.eclipse.linuxtools.tmf/request=false
-org.eclipse.linuxtools.tmf/signals=false
+org.eclipse.linuxtools.tmf/signal=false
 org.eclipse.linuxtools.tmf/event=false
