@@ -57,7 +57,6 @@ public abstract class TmfEventProvider<T extends TmfEvent> extends TmfDataProvid
 			coalescedRequest.addRequest(eventRequest);
 	        if (Tracer.isRequestTraced()) {
 		        Tracer.traceRequest(request, "coalesced with " + coalescedRequest.getRequestId()); //$NON-NLS-1$
-		        Tracer.traceRequest(coalescedRequest, "added " + request.getRequestId()); //$NON-NLS-1$
 	        }
 			fPendingCoalescedRequests.add(coalescedRequest);
 		}
