@@ -1,3 +1,15 @@
+2011-03-10  Francois Chouinard  <fchouinard@gmail.com>
+
+    * src/org/eclipse/linuxtools/tmf/.options: Fixed a typo
+	* src/org/eclipse/linuxtools/tmf/signal/TmfSignalManager.java: Improved request tracing
+	* src/org/eclipse/linuxtools/tmf/request/TmfRequestExecutor.java: Improved request tracing
+	* src/org/eclipse/linuxtools/tmf/request/TmfEventRequest.java: Streamlined constructor
+	* src/org/eclipse/linuxtools/tmf/request/TmfDataRequest.java: Improved request tracing
+	* src/org/eclipse/linuxtools/tmf/component/TmfEventProvider.java: Improved request tracing
+	* src/org/eclipse/linuxtools/tmf/component/TmfDataProvider.java: Improved request tracing
+	* src/org/eclipse/linuxtools/tmf/Tracer.java: Improved request tracing
+    * src/org/eclipse/linuxtools/tmf/experiment/TmfExperiment.java: Fixed request completion call
+	
 2010-12-13  Bernd Hufmann  <bhufmann@gmail.com>
 
 	* src/org/eclipse/linuxtools/tmf/experiment/TmfExperiment.java (armRequest): For data requests, seek only if necessary   
